--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -59,6 +59,7 @@
   },
   "dependencies": {
     "@metamask/abi-utils": "^1.1.0",
-    "@metamask/utils": "^3.3.1"
+    "@metamask/utils": "^3.3.1",
+    "arweave": "^1.11.6"
   }
 }
